<resources>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="app_name">Aisle</string>
    <string name="discover">Discover</string>
    <string name="notes">Notes</string>
    <string name="matches">Matches</string>
    <string name="profile">Profile</string>
    <string name="no_internet">No internet connection available.</string>
    <string name="error_unknown">Something went wrong. Please try again later.</string>
    <string name="err_empty_field">Empty Filed Not Allowed</string>
    <string name="err_invalid_phone">Invalid Number</string>
    <string name="err_invalid_code">Invalid</string>
    <string name="tap_to_review">Tap to review 50+ notes</string>
    <string name="interested_in_you">Interested in You</string>
    <string name="str_notes">Notes</string>
    <string name="str_personal_msg">Personal messages to you</string>
    <string name="str_premium_member_msg">Premium members can view all their likes at once</string>
    <string name="str_upgrade">Upgrade</string>
    <string name="str_continue">Continue</string>
    <string name="str_get_otp">Get OTP</string>
    <string name="enter_phone_number">Enter Your\nPhone Number</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="hint_code">+1</string>
    <string name="str_enter_otp">Enter The\nOTP</string>
    <string name="hint_otp">0000</string>
</resources>