<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.vmn.aisle.auth.viewmodel.PhoneNumberViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="32dp">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:fontFamily="@font/inter_regular"
            android:text="@string/str_get_otp"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/inter_extra_bold"
            android:includeFontPadding="false"
            android:text="@string/enter_phone_number"
            android:textColor="@color/black"
            android:textSize="32sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilCode"
            style="@style/AuthTextInputLayout"
            setError="@{viewModel.bmPhoneNumber.countryCodeError}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:maxEms="3"
            android:minHeight="36dp"
            android:minEms="3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvDesc">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_semi_bold"
                android:hint="@string/hint_code"
                android:importantForAutofill="no"
                android:inputType="phone"
                android:maxLength="3"
                android:paddingVertical="8dp"
                android:text="@={viewModel.bmPhoneNumber.countryCode}"
                android:textColor="@color/black" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilPhone"
            style="@style/AuthTextInputLayout"
            setError="@{viewModel.bmPhoneNumber.phoneNumberError}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="12dp"
            android:maxEms="10"
            android:minEms="10"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toEndOf="@+id/tilCode"
            app:layout_constraintTop_toBottomOf="@+id/tvDesc">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_semi_bold"
                android:hint="@string/hint_phone_number"
                android:importantForAutofill="no"
                android:inputType="phone"
                android:maxLength="10"
                android:paddingVertical="8dp"
                android:text="@={viewModel.bmPhoneNumber.phoneNumber}"
                android:textColor="@color/black" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnContinue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:background="@drawable/primary_action_button"
            android:includeFontPadding="false"
            android:minWidth="96dp"
            android:minHeight="40dp"
            android:text="@string/str_continue"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tilPhone" />

        <ProgressBar
            android:id="@+id/progress"
            isVisible="@{viewModel.bmPhoneNumber.showProgress}"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginTop="16dp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnContinue"
            tools:visibility="visible" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>