<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.vmn.aisle.home.viewmodel.NotesViewModel" />

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvNotes"
                isVisible="@{viewModel.bmNotes.showInitialLayouts}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="48dp"
                android:fontFamily="@font/gilroy_extra_bold"
                android:gravity="center"
                android:text="@string/str_notes"
                android:textColor="@color/black"
                android:textSize="28sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvPersonalMsg"
                isVisible="@{viewModel.bmNotes.showInitialLayouts}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/gilroy_semi_bold"
                android:gravity="center"
                android:text="@string/str_personal_msg"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvNotes" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvInvites"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintTop_toBottomOf="@id/tvPersonalMsg"
                tools:itemCount="2"
                tools:listitem="@layout/item_invite" />

            <TextView
                android:id="@+id/tvInterested"
                isVisible="@{viewModel.bmNotes.showInitialLayouts}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/gilroy_semi_bold"
                android:gravity="start"
                android:text="@string/interested_in_you"
                android:textColor="@color/black"
                android:textSize="22sp"
                app:layout_constraintTop_toBottomOf="@id/rvInvites" />

            <include
                android:id="@+id/lytPremiumUser"
                layout="@layout/layout_premium_user_msg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvInterested"
                app:viewModel="@{viewModel}" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvLikes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintTop_toBottomOf="@+id/lytPremiumUser"
                tools:itemCount="3"
                tools:listitem="@layout/item_user_who_liked" />

            <ProgressBar
                isVisible="@{viewModel.bmNotes.showProgress}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>