<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.vmn.aisle.auth.viewmodel.OTPViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="32dp">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:fontFamily="@font/inter_regular"
            android:text="@{viewModel.bmOtp.phoneNumber}"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="+91 9999999999" />

        <ImageView
            android:id="@+id/imgEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:src="@drawable/baseline_mode_edit_24"
            app:layout_constraintBottom_toBottomOf="@+id/tvTitle"
            app:layout_constraintStart_toEndOf="@+id/tvTitle"
            app:layout_constraintTop_toTopOf="@+id/tvTitle" />

        <TextView
            android:id="@+id/tvDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/inter_extra_bold"
            android:includeFontPadding="false"
            android:text="@string/str_enter_otp"
            android:textColor="@color/black"
            android:textSize="32sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilOtp"
            style="@style/AuthTextInputLayout"
            setError="@{viewModel.bmOtp.otpCodeError}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:maxEms="4"
            android:minHeight="36dp"
            android:minEms="4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvDesc">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etOtp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_semi_bold"
                android:hint="@string/hint_otp"
                android:importantForAutofill="no"
                android:inputType="phone"
                android:maxLength="4"
                android:paddingVertical="8dp"
                android:text="@={viewModel.bmOtp.otpCode}"
                android:textColor="@color/black" />

        </com.google.android.material.textfield.TextInputLayout>


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnContinue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:background="@drawable/primary_action_button"
            android:includeFontPadding="false"
            android:minWidth="96dp"
            android:minHeight="40dp"
            android:text="@string/str_continue"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tilOtp"
            app:layout_constraintVertical_bias="0" />

        <ProgressBar
            android:id="@+id/progress"
            isVisible="@{viewModel.bmOtp.showProgress}"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginTop="16dp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnContinue"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/tvTimer"
            countdown="@{viewModel.bmOtp.countDown}"
            isResendEnabled="@{viewModel.bmOtp.resendEnabled}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:fontFamily="@font/inter_semi_bold"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@id/btnContinue"
            app:layout_constraintStart_toEndOf="@id/btnContinue"
            app:layout_constraintTop_toTopOf="@id/btnContinue" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>